[package]
name = "endzone_simulator"
version = "0.1.0"
edition = "2021"

# This section defines the library target, which points to src/lib.rs
[lib]
name = "ez_sim"
path = "src/lib.rs"

# This section defines the binary target, which points to src/main.rs
[[bin]]
name = "simulator_cli"
path = "src/main.rs"

[dependencies]
# No external dependencies needed yet.