[package]
name = "endzone_simulator"
version = "0.1.0"
edition = "2021"

# This section defines the library target, which points to src/lib.rs
[lib]
name = "ez_sim_lib"
path = "src/lib.rs"

# This section defines the binary target, which points to src/main.rs
[[bin]]
name = "ez_sim"
path = "src/main.rs"

[dependencies]
serialport = "4.2.2"
ratatui = { version = "0.26.1", features = ["crossterm"] }
crossterm = "0.27.0"